--- a/analytics.html
+++ b/analytics.html
@@ -5,34 +5,95 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Analytics</title>
+
+  <!-- Uses your existing theme for buttons/pills if present -->
   <link rel="stylesheet" href="theme.css" />
+
+  <!-- Analytics-specific bubbly styling -->
   <style>
-    /* tiny page-specific layout helpers */
-    .pageWrap{ max-width: 820px; margin: 0 auto; padding: 16px; }
-    .backRow{ display:flex; align-items:center; gap:10px; margin-bottom:12px; }
+    :root{
+      --ink: rgba(11,18,32,.92);
+      --muted: rgba(11,18,32,.62);
+      --line: rgba(11,18,32,.10);
+
+      --blue: 110, 190, 255;
+      --pink: 255, 140, 200;
+      --purple: 185, 150, 255;
+      --mint: 120, 235, 205;
+
+      --bg:
+        radial-gradient(520px 340px at 12% 10%, rgba(var(--pink), .16), transparent 60%),
+        radial-gradient(560px 360px at 88% 18%, rgba(var(--mint), .14), transparent 62%),
+        radial-gradient(660px 420px at 30% 96%, rgba(var(--purple), .16), transparent 62%),
+        #ffffff;
+
+      --r-xl: 28px;
+      --r-lg: 22px;
+      --r-md: 18px;
+
+      --shadow1: 0 10px 26px rgba(11,18,32,.10);
+      --shadow2: 0 18px 44px rgba(11,18,32,.12);
+    }
+
+    body{
+      margin:0;
+      background: var(--bg);
+      color: var(--ink);
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text", system-ui, Segoe UI, Roboto, Helvetica, Arial;
+    }
+
+    .wrap{
+      max-width: 880px;
+      margin: 0 auto;
+      padding: 16px;
+      padding-top: calc(16px + env(safe-area-inset-top));
+      padding-bottom: calc(16px + env(safe-area-inset-bottom));
+    }
+
+    .topRow{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      margin-bottom: 12px;
+    }
+
     .wizShell{
-      border: 1px solid rgba(11,18,32,.10);
-      border-radius: 28px;
+      border: 1px solid var(--line);
+      border-radius: var(--r-xl);
       overflow:hidden;
       background: rgba(255,255,255,.86);
-      box-shadow: 0 18px 44px rgba(11,18,32,.12);
+      box-shadow: var(--shadow2);
     }
+
     .wizHead{
       padding: 16px 16px 12px;
       border-bottom: 1px solid rgba(11,18,32,.06);
       background:
-        radial-gradient(240px 110px at 18% 0%, rgba(110,190,255,.16), transparent 70%),
-        radial-gradient(240px 110px at 82% 0%, rgba(255,140,200,.16), transparent 70%),
+        radial-gradient(240px 110px at 18% 0%, rgba(var(--blue), .18), transparent 70%),
+        radial-gradient(240px 110px at 82% 0%, rgba(var(--pink), .18), transparent 70%),
         rgba(255,255,255,.55);
     }
-    .wizTitle{ font-weight: 950; font-size: 20px; margin:0; }
-    .wizSub{ margin-top:6px; color: rgba(11,18,32,.62); font-size: 13px; line-height:1.4; }
+
+    .hTitle{
+      font-weight: 950;
+      font-size: 20px;
+      letter-spacing: .1px;
+    }
+
+    .hSub{
+      margin-top: 6px;
+      color: var(--muted);
+      font-size: 13px;
+      line-height: 1.4;
+    }
+
     .wizContent{
       padding: 14px 16px;
-      max-height: 64vh;
+      max-height: 68vh;
       overflow-y:auto;
       -webkit-overflow-scrolling: touch;
     }
+
     .wizFoot{
       padding: 12px 16px 16px;
       border-top: 1px solid rgba(11,18,32,.06);
@@ -41,66 +102,157 @@
       align-items:center;
       gap:10px;
     }
+
     .stepPill{
       display:inline-flex;
       align-items:center;
       gap:8px;
       padding: 8px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(11,18,32,.10);
+      border: 1px solid var(--line);
       background: rgba(11,18,32,.04);
       font-size: 12px;
       color: rgba(11,18,32,.65);
       user-select:none;
       white-space:nowrap;
     }
-    .cards{ display:grid; grid-template-columns: 1fr; gap: 12px; }
-    .cardMini{
-      border: 1px solid rgba(11,18,32,.10);
-      border-radius: 22px;
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap: 12px;
+    }
+
+    .card{
+      border: 1px solid var(--line);
+      border-radius: var(--r-lg);
       background: linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.78));
-      box-shadow: 0 10px 26px rgba(11,18,32,.10);
+      box-shadow: var(--shadow1);
       padding: 14px 14px;
     }
-    .cardMini h3{ margin:0 0 8px; font-size:14px; font-weight:950; }
-    .meta{ color: rgba(11,18,32,.62); font-size:12px; line-height:1.35; }
-    .table{
-      margin-top: 10px;
-      border-top: 1px solid rgba(11,18,32,.06);
+
+    .cardTitle{
+      font-weight: 950;
+      font-size: 14px;
+      margin-bottom: 6px;
     }
-    .row{
-      display:grid;
-      grid-template-columns: 1.4fr .7fr .7fr .7fr .7fr .7fr;
-      gap: 8px;
-      padding: 8px 0;
-      border-bottom: 1px solid rgba(11,18,32,.06);
+
+    .cardMeta{
+      color: var(--muted);
       font-size: 12px;
+      line-height: 1.35;
     }
-    .row.head{ font-weight: 950; color: rgba(11,18,32,.75); }
-    .row .r{ text-align:right; font-variant-numeric: tabular-nums; }
-    .muted{ color: rgba(11,18,32,.55); }
+
+    .pillRow{
+      margin-top: 10px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+    }
+
+    .itemPill{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      padding: 10px 12px;
+      border-radius: 999px;
+      border: 1px solid rgba(11,18,32,.10);
+      background: rgba(255,255,255,.84);
+      box-shadow: 0 10px 22px rgba(11,18,32,.08);
+    }
+
+    .itemLeft{
+      min-width:0;
+      display:flex;
+      flex-direction:column;
+      gap:2px;
+    }
+
+    .itemName{
+      font-weight: 950;
+      font-size: 13px;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      max-width: 55vw;
+    }
+
+    .itemSub{
+      font-size: 12px;
+      color: var(--muted);
+    }
+
+    .itemRight{
+      display:flex;
+      align-items:center;
+      gap:8px;
+      flex-shrink:0;
+      font-variant-numeric: tabular-nums;
+    }
+
+    .minBadge{
+      padding: 8px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(11,18,32,.10);
+      background: rgba(11,18,32,.04);
+      font-weight: 950;
+      font-size: 12px;
+      color: rgba(11,18,32,.78);
+    }
+
+    .deltaBadge{
+      padding: 8px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(11,18,32,.10);
+      font-weight: 950;
+      font-size: 12px;
+      background: rgba(255,255,255,.86);
+      color: rgba(11,18,32,.78);
+    }
+
+    .deltaUp{
+      border-color: rgba(var(--mint), .55);
+      background: rgba(var(--mint), .16);
+    }
+    .deltaDown{
+      border-color: rgba(var(--pink), .55);
+      background: rgba(var(--pink), .14);
+    }
+    .deltaFlat{
+      border-color: rgba(11,18,32,.10);
+      background: rgba(11,18,32,.04);
+    }
+
+    pre.raw{
+      margin: 10px 0 0;
+      white-space: pre-wrap;
+      word-break: break-word;
+      font-size: 12px;
+      color: rgba(11,18,32,.80);
+    }
   </style>
 </head>
 
 <body>
-  <div class="pageWrap">
-    <div class="backRow">
+  <div class="wrap">
+    <div class="topRow">
       <a class="btn small ghost" href="index.html">← Back</a>
       <div class="pill"><span>Analytics</span></div>
     </div>
 
     <div class="wizShell">
       <div class="wizHead">
-        <div class="wizTitle" id="wizTitle">Analytics</div>
-        <div class="wizSub" id="wizSub">Loading…</div>
+        <div class="hTitle" id="wizTitle">Analytics</div>
+        <div class="hSub" id="wizSub">Loading…</div>
       </div>
 
       <div class="wizContent" id="wizContent"></div>
 
       <div class="wizFoot">
-        <button class="btn ghost" id="wizBack">Back</button>
+        <button class="btn ghost" id="wizBack" type="button">Back</button>
         <div class="stepPill" id="wizStepPill">Step 1/1</div>
-        <button class="btn" id="wizNext">Next</button>
+        <button class="btn" id="wizNext" type="button">Next</button>
       </div>
     </div>
   </div>
