--- a/analytics.html
+++ b/analytics.html
@@ -1,138 +1,248 @@
-<!-- analytics.html (FULL) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Analytics</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Analytics</title>
 
-  <!-- Uses your existing theme for buttons/pills if present -->
-  <link rel="stylesheet" href="theme.css" />
-
-  <!-- Analytics-specific bubbly styling -->
 <style>
-  :root{
-    --ink: rgba(11,18,32,.92);
-    --muted: rgba(11,18,32,.62);
-    --line: rgba(11,18,32,.10);
+:root{
+  --ink:#0f172a;
+  --muted:#64748b;
+  --line:#e2e8f0;
 
-    --blue: 110, 190, 255;
-    --pink: 255, 140, 200;
-    --purple: 185, 150, 255;
-    --mint: 120, 235, 205;
+  --blue:#cfe9ff;
+  --mint:#d9fbe8;
+  --pink:#ffe0ef;
+  --lav:#efe6ff;
 
-    --bg:
-      radial-gradient(520px 340px at 12% 10%, rgba(var(--pink), .16), transparent 60%),
-      radial-gradient(560px 360px at 88% 18%, rgba(var(--mint), .14), transparent 62%),
-      radial-gradient(660px 420px at 30% 96%, rgba(var(--purple), .16), transparent 62%),
-      #ffffff;
+  --radius:26px;
+}
 
-    --r-xl: 28px;
-    --r-lg: 22px;
+body{
+  margin:0;
+  font-family:-apple-system,BlinkMacSystemFont,sans-serif;
+  background:white;
+  color:var(--ink);
+  overflow:hidden;
+}
 
-    --shadow1: 0 10px 26px rgba(11,18,32,.10);
-    --shadow2: 0 18px 44px rgba(11,18,32,.12);
-  }
+.slider{
+  display:flex;
+  height:100vh;
+  width:100vw;
+  overflow-x:auto;
+  scroll-snap-type:x mandatory;
+  scroll-behavior:smooth;
+}
 
-  body{ margin:0; background: var(--bg); color: var(--ink); font-family: -apple-system, system-ui; }
-  .wrap{ max-width: 880px; margin:0 auto; padding:16px; padding-top: calc(16px + env(safe-area-inset-top)); padding-bottom: calc(16px + env(safe-area-inset-bottom)); }
+.slide{
+  flex:0 0 100%;
+  scroll-snap-align:start;
+  padding:22px;
+  box-sizing:border-box;
+  overflow-y:auto;
+}
 
-  .wizShell{ border:1px solid var(--line); border-radius: var(--r-xl); overflow:hidden; background: rgba(255,255,255,.86); box-shadow: var(--shadow2); }
+.sectionTitle{
+  font-size:22px;
+  font-weight:900;
+  margin-bottom:18px;
+}
 
-  .wizHead{
-    padding:16px 16px 12px;
-    border-bottom:1px solid rgba(11,18,32,.06);
-    background:
-      radial-gradient(240px 110px at 18% 0%, rgba(var(--blue), .18), transparent 70%),
-      radial-gradient(240px 110px at 82% 0%, rgba(var(--pink), .18), transparent 70%),
-      rgba(255,255,255,.55);
-  }
+.card{
+  border-radius:var(--radius);
+  padding:18px;
+  margin-bottom:16px;
+  box-shadow:0 10px 30px rgba(0,0,0,.06);
+}
 
-  .hTitle{ font-weight:950; font-size:20px; }
-  .hSub{ margin-top:6px; color: var(--muted); font-size:13px; line-height:1.4; }
+.blue{ background:var(--blue); }
+.mint{ background:var(--mint); }
+.pink{ background:var(--pink); }
+.lav{ background:var(--lav); }
 
-  .wizContent{ padding:14px 16px; max-height: 68vh; overflow-y:auto; -webkit-overflow-scrolling: touch; }
-  .wizFoot{ padding:12px 16px 16px; border-top:1px solid rgba(11,18,32,.06); display:flex; justify-content:space-between; align-items:center; gap:10px; }
+.bigNumber{
+  font-size:32px;
+  font-weight:900;
+}
 
-  .stepPill{ padding:8px 10px; border-radius:999px; border:1px solid var(--line); background: rgba(11,18,32,.04); font-size:12px; color: rgba(11,18,32,.65); }
+.sub{
+  font-size:13px;
+  color:var(--muted);
+  margin-top:4px;
+}
 
-  .grid{ display:grid; grid-template-columns: 1fr; gap:12px; }
+.pillRow{
+  margin-top:14px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
 
-  .card{
-    border:1px solid var(--line);
-    border-radius: var(--r-lg);
-    background: linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.78));
-    box-shadow: var(--shadow1);
-    padding:14px 14px;
-  }
+.pill{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:12px 16px;
+  background:white;
+  border-radius:999px;
+  font-weight:600;
+  box-shadow:0 6px 16px rgba(0,0,0,.06);
+}
 
-  .cardTitle{ font-weight:950; font-size:14px; margin-bottom:6px; }
-  .cardMeta{ color: var(--muted); font-size:12px; line-height:1.35; }
+.deltaUp{ color:#16a34a; }
+.deltaDown{ color:#dc2626; }
 
-  .pillRow{ margin-top:10px; display:flex; flex-direction:column; gap:10px; }
+.dots{
+  position:fixed;
+  bottom:18px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:8px;
+}
 
-  .itemPill{
-    display:flex; align-items:center; justify-content:space-between; gap:10px;
-    padding:10px 12px;
-    border-radius:999px;
-    border:1px solid rgba(11,18,32,.10);
-    background: rgba(255,255,255,.84);
-    box-shadow: 0 10px 22px rgba(11,18,32,.08);
-  }
+.dot{
+  width:8px;
+  height:8px;
+  border-radius:50%;
+  background:#cbd5e1;
+  transition:.2s;
+}
 
-  .itemName{ font-weight:950; font-size:13px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; max-width: 55vw; }
-  .itemSub{ font-size:12px; color: var(--muted); }
-
-  .itemRight{ display:flex; align-items:center; gap:8px; flex-shrink:0; font-variant-numeric: tabular-nums; }
-
-  .minBadge{
-    padding:8px 10px;
-    border-radius:999px;
-    border:1px solid rgba(11,18,32,.10);
-    background: rgba(11,18,32,.04);
-    font-weight:950;
-    font-size:12px;
-    color: rgba(11,18,32,.78);
-  }
-
-  .deltaBadge{
-    padding:8px 10px;
-    border-radius:999px;
-    border:1px solid rgba(11,18,32,.10);
-    font-weight:950;
-    font-size:12px;
-    background: rgba(255,255,255,.86);
-    color: rgba(11,18,32,.78);
-  }
-  .deltaUp{ border-color: rgba(var(--mint), .55); background: rgba(var(--mint), .16); }
-  .deltaDown{ border-color: rgba(var(--pink), .55); background: rgba(var(--pink), .14); }
-  .deltaFlat{ border-color: rgba(11,18,32,.10); background: rgba(11,18,32,.04); }
+.dot.active{
+  background:#0f172a;
+}
 </style>
 </head>
-
 <body>
-  <div class="wrap">
-    <div class="topRow">
-      <a class="btn small ghost" href="index.html">← Back</a>
-      <div class="pill"><span>Analytics</span></div>
+
+<div class="slider" id="slider">
+
+  <!-- Slide 1 -->
+  <div class="slide">
+    <div class="sectionTitle">Today Snapshot</div>
+
+    <div class="card mint">
+      <div class="bigNumber" id="prodMin">--</div>
+      <div class="sub">Productive Minutes</div>
     </div>
 
-    <div class="wizShell">
-      <div class="wizHead">
-        <div class="hTitle" id="wizTitle">Analytics</div>
-        <div class="hSub" id="wizSub">Loading…</div>
-      </div>
+    <div class="card pink">
+      <div class="bigNumber" id="relaxMin">--</div>
+      <div class="sub">Relax Minutes</div>
+    </div>
 
-      <div class="wizContent" id="wizContent"></div>
-
-      <div class="wizFoot">
-        <button class="btn ghost" id="wizBack" type="button">Back</button>
-        <div class="stepPill" id="wizStepPill">Step 1/1</div>
-        <button class="btn" id="wizNext" type="button">Next</button>
-      </div>
+    <div class="card blue">
+      <div class="bigNumber" id="balance">--</div>
+      <div class="sub">Balance</div>
     </div>
   </div>
 
-  <script src="analytics.js"></script>
+  <!-- Slide 2 -->
+  <div class="slide">
+    <div class="sectionTitle">Top Activities</div>
+    <div class="pillRow" id="topActivities"></div>
+  </div>
+
+  <!-- Slide 3 -->
+  <div class="slide">
+    <div class="sectionTitle">Locations</div>
+    <div class="pillRow" id="locations"></div>
+  </div>
+
+  <!-- Slide 4 -->
+  <div class="slide">
+    <div class="sectionTitle">Recent Sessions</div>
+    <div class="pillRow" id="recent"></div>
+  </div>
+
+</div>
+
+<div class="dots">
+  <div class="dot active"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+  <div class="dot"></div>
+</div>
+
+<script>
+function load(){
+  const raw = localStorage.getItem("brain_state_v1");
+  if(!raw) return null;
+  return JSON.parse(raw);
+}
+
+function formatMin(n){
+  return (n||0).toFixed(1)+"m";
+}
+
+function topActivities(sessions){
+  const map={};
+  sessions.forEach(s=>{
+    const dur=s.durationMin||0;
+    (s.active.activity||[]).forEach(a=>{
+      map[a]=(map[a]||0)+dur;
+    });
+  });
+  return Object.entries(map).sort((a,b)=>b[1]-a[1]).slice(0,5);
+}
+
+function agg(sessions,key){
+  const map={};
+  sessions.forEach(s=>{
+    const dur=s.durationMin||0;
+    const val=s.active[key];
+    if(!val) return;
+    map[val]=(map[val]||0)+dur;
+  });
+  return Object.entries(map).sort((a,b)=>b[1]-a[1]).slice(0,5);
+}
+
+document.addEventListener("DOMContentLoaded",()=>{
+  const brain=load();
+  if(!brain) return;
+
+  document.getElementById("prodMin").textContent=formatMin(brain.productiveMins);
+  document.getElementById("relaxMin").textContent=formatMin(brain.relaxMins);
+  document.getElementById("balance").textContent="$"+brain.balance.toFixed(2);
+
+  const sessions=brain.sessions||[];
+
+  const actContainer=document.getElementById("topActivities");
+  topActivities(sessions).forEach(([name,min])=>{
+    const div=document.createElement("div");
+    div.className="pill";
+    div.innerHTML=`<span>${name}</span><span>${formatMin(min)}</span>`;
+    actContainer.appendChild(div);
+  });
+
+  const locContainer=document.getElementById("locations");
+  agg(sessions,"location").forEach(([name,min])=>{
+    const div=document.createElement("div");
+    div.className="pill";
+    div.innerHTML=`<span>${name}</span><span>${formatMin(min)}</span>`;
+    locContainer.appendChild(div);
+  });
+
+  const recentContainer=document.getElementById("recent");
+  sessions.slice(-5).reverse().forEach(s=>{
+    const div=document.createElement("div");
+    div.className="pill";
+    div.innerHTML=`<span>${s.active.location}</span><span>${formatMin(s.durationMin)}</span>`;
+    recentContainer.appendChild(div);
+  });
+
+  const slider=document.getElementById("slider");
+  const dots=document.querySelectorAll(".dot");
+
+  slider.addEventListener("scroll",()=>{
+    const index=Math.round(slider.scrollLeft/window.innerWidth);
+    dots.forEach((d,i)=>d.classList.toggle("active",i===index));
+  });
+});
+</script>
+
 </body>
 </html>
